# sanity

./: .gitignore  README.md  contributors.txt
cmake/: add_sources.cmake  apple_install_command_line_tools.cmake  require_amqpcpp.cmake  require_asio.cmake  require_boost.cmake  require_c-ares.cmake  require_curl.cmake  require_devil.cmake  require_gtest.cmake  require_icu.cmake  require_jpeg.cmake  require_lcms.cmake  require_ldns.cmake  require_libmng.cmake  require_mysql.cmake  require_mysqlcppcon.cmake  require_openssl.cmake  require_protobuf.cmake  require_sdl.cmake  require_tiff.cmake  sanity.cmake  sanity_deduce_darwin_toolset.cmake  sanity_deduce_version.cmake  sanity_download.cmake  sanity_get_repo.cmake  sanity_require_threads.cmake
cmake/patch/: lcms-1.19.patch  ldns-1.6.17.patch
cmake/toolchain/: ios.cmake
docs/: problems_i_encountered_while_building_this.txt
test/: CMakeLists.txt  test_include_and_link.cpp
test/boost_only/: CMakeLists.txt  simple_test.cpp
test/gtest_only/: CMakeLists.txt  main.cpp
test/icu_only/: CMakeLists.txt  test_simple.cpp
test/mysql_only/: CMakeLists.txt  test_simple.cpp
test/openssl_only/: CMakeLists.txt  test_simple.cpp
test/protobuf_only/: CMakeLists.txt  simple.proto  test_simple.cpp
